--- a/UniversityManagement/Views/Instructors/Edit.cshtml
+++ b/UniversityManagement/Views/Instructors/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model UniversityManagement.Models.Instructor
+﻿@using UniversityManagement.Models.ViewModels
+@model UniversityManagement.Models.Instructor
 
 @{
     ViewData["Title"] = "Edit";
@@ -33,6 +34,36 @@
                 <input asp-for="OfficeAssignment!.Location" class="form-control" />
                 <span asp-validation-for="OfficeAssignment!.Location" class="text-danger" />
             </div>
+
+
+            <div class="form-group">
+                <div class="col-offset-2 col-10">
+                    <table>
+                        <tr>
+                            @{
+                                int cnt = 0;
+                                List<AssignedCourseData> courseList = ViewBag.Courses;
+
+                                foreach(var course in courseList)
+                                {
+                                    if(cnt++ % 3 == 0)
+                                    {
+                                        @:</tr><tr>
+                                    }
+                                    @:<td>
+                                        <input type="checkbox" name="selectedCourses" value="@course.CourseID"
+                                        @(Html.Raw(course.Assigned ? "checked=\"checked\"":"")!)/>
+                                        @course.CourseID @: @course.Title
+
+                                    @:</td>
+                                }
+                            }
+                        </tr>
+                    </table>
+                </div>
+            </div>
+
+
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
