--- a/UniversityManagement/Views/_ViewImports.cshtml
+++ b/UniversityManagement/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using UniversityManagement
 @using UniversityManagement.Models
+@using UniversityManagement.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
